--- a/src/main/webapp/WEB-INF/examples/maps.html
+++ b/src/main/webapp/WEB-INF/examples/maps.html
@@ -27,7 +27,7 @@
       <!-- Brand -->
       <div class="sidenav-header  align-items-center">
         <a class="navbar-brand" href="javascript:void(0)">
-          <img src="/static/img/brand/blue.png" class="navbar-brand-img" alt="...">
+          <img src="/static/img/brand/logo.png" class="navbar-brand-img" alt="LOGO">
         </a>
       </div>
       <div class="navbar-inner">
